Ajout conteneur-maillot

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
             </div>
         </div>
         <nav>
-            <a href="pages/boutique.html"><img src="media/image/logo.PNG" alt="Logo Entreprise"></a>
-            <a href="pages/boutique.html">Nouveautés</a>
-            <a href="pages/boutique.html">Hommes</a>
-            <a href="pages/boutique.html">Femmes</a>
-            <a href="pages/boutique.html">Enfants</a>
+            <a href="#accueil"><img src="media/image/logo.PNG" alt="Logo Entreprise"></a>
+            <a href="#Liga">LaLiga</a>
+            <a href="#Bundesliga">Bundesliga</a>
+            <a href="#PremierLeague">Premier League</a>
+            <a href="#Ligue1">Ligue 1</a>
             <a href="#contacts">Contact</a>
         </nav>
     </div>
 
-    <main>
+    <main id="accueil">
         <section class="offre-section">
             <section class="offre-content">
                 <h1>Foot Jersey : OFFRE DE DINGUE OMG ! -99%</h1>
@@ -73,26 +73,124 @@
                 <a href="pages/boutique.html" class="button">Découvres nos offres !</a>
             </section>
         </section>
-
-        <section clas="LaLiga">
+        
+        <!--LIGA-->
+        <section class="titre" id="Liga">
             <img src="media/image/logo/laLiga.webp" alt="La Liga">
             <h2>La Liga</h2>
         </section>
+        <div class="conteneur">
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotReal.png" alt="Maillot Real"></a>
+                <p>Maillot Real Madrid - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <p>Maillot Allemagne - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <p>Maillot Allemagne - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <p>Maillot Allemagne - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+        </div>
 
-        <section clas="LaLiga">
+        <!--BUNDESLIGA-->
+        <section class="titre" id="Bundesliga">
             <img src="media/image/logo/bundesliga.webp" alt="Bundesliga">
             <h2>Bundesliga</h2>
         </section>
+        <div class="conteneur">
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <p>Maillot Allemagne - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <p>Maillot Allemagne - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <p>Maillot Allemagne - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <p>Maillot Allemagne - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+        </div>
 
-        <section clas="LaLiga">
+        <!--PREMIER LEAGUE-->
+        <section class="titre" id="PremierLeague">
             <img src="media/image/logo/premierLeague.png" alt="Premier League">
             <h2>Premier League</h2>
         </section>
+        <div class="conteneur">
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotUnited.png" alt="Maillot Manchester United"></a>
+                <p>Maillot Manchester United - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal"></a>
+                <p>Maillot Arsenal - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <p>Maillot Allemagne - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <p>Maillot Allemagne - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+        </div>
 
-        <section clas="LaLiga">
+        <!--LIGUE 1-->
+        <section class="titre" id="Ligue1">
             <img src="media/image/logo/Ligue1.webp" alt="Ligue 1">
             <h2>Ligue 1</h2>
         </section>
+        <div class="conteneur">
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotLosc.png" alt="Maillot Losc"></a>
+                <p>Maillot LOSC - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotMonaco.png" alt="Maillot Monaco"></a>
+                <p>Maillot AS Monaco - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotOm.png" alt="Maillot Om"></a>
+                <p>Maillot Olympique Marseille - Homme</p>
+                <h3>€20.50-€30.50</h3>
+            </div>
+            <div class="maillot">
+                <a href="blabla"><img src="media/image/maillot/maillotCaen.png" alt="Maillot Caen">
+                <p>Maillot Caen - Homme</p>
+                <h3>€20.50-€30.50</h3></a>
+            </div>
+        </div>
     </main>
+    <footer>
+        <h4>Site Etudiant developpé par<br> Wallace Verron et Melisa Blabla</h4>
+        <ul>
+            <li><a href="">Mentions Légales</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
