--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <nav>
             <a href="#accueil"><img src="media/image/logo.PNG" alt="Logo Entreprise"></a>
-            <a href="#Liga">LaLiga</a>
+            <a href="#Liga">BLABLA</a>
             <a href="#Bundesliga">Bundesliga</a>
             <a href="#PremierLeague">Premier League</a>
             <a href="#Ligue1">Ligue 1</a>
