--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <nav>
             <a href="#accueil"><img src="media/image/logo.PNG" alt="Logo Entreprise"></a>
             <a href="#Liga">LaLiga</a>
-            <a href="#Bundesliga">BLABLA</a>
+            <a href="#Bundesliga">Bundesliga</a>
             <a href="#PremierLeague">Premier League</a>
             <a href="#Ligue1">Ligue 1</a>
             <a href="#contacts">Contact</a>
