--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
         </div>
     </main>
     <footer>
-        <h4>Site Etudiant developpé par<br> Wallace Verron et Melisa Blabla</h4>
+        <h4>Site Etudiant developpé par<br> Wallace Verron et Melisa Yilmaz</h4>
         <ul>
-            <li><a href="">Mentions Légales</a></li>
+            <li><a href="./pages/credits.html">Mentions Légales</a></li>
         </ul>
     </footer>
 </body>
