--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     </div>
 
     <main id="accueil">
-        <section class="offre-section">
-            <section class="offre-content">
+        <div class="offre-section">
+            <div class="offre-content">
                 <h1>Foot Jersey : OFFRE DE DINGUE OMG ! -99%</h1>
                 <p>Un maillot offert à l'achat d'un ensemble !</p>
                 <a href="pages/boutique.html" class="button">Découvres nos offres !</a>
-            </section>
-        </section>
+            </div>
+        </div>
         
         <!--LIGA-->
         <section class="titre" id="Liga">
@@ -80,26 +80,26 @@
             <h2>La Liga</h2>
         </section>
         <div class="conteneur">
-            <div class="maillot">
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotReal.png" alt="Maillot Real"></a>
                 <p>Maillot Real Madrid - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
+            </section>
         </div>
 
         <!--BUNDESLIGA-->
@@ -108,26 +108,26 @@
             <h2>Bundesliga</h2>
         </section>
         <div class="conteneur">
-            <div class="maillot">
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
+            </section>
         </div>
 
         <!--PREMIER LEAGUE-->
@@ -136,26 +136,26 @@
             <h2>Premier League</h2>
         </section>
         <div class="conteneur">
-            <div class="maillot">
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotUnited.png" alt="Maillot Manchester United"></a>
                 <p>Maillot Manchester United - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal"></a>
                 <p>Maillot Arsenal - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
+            </section>
         </div>
 
         <!--LIGUE 1-->
@@ -164,26 +164,26 @@
             <h2>Ligue 1</h2>
         </section>
         <div class="conteneur">
-            <div class="maillot">
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotLosc.png" alt="Maillot Losc"></a>
                 <p>Maillot LOSC - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotMonaco.png" alt="Maillot Monaco"></a>
                 <p>Maillot AS Monaco - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotOm.png" alt="Maillot Om"></a>
                 <p>Maillot Olympique Marseille - Homme</p>
                 <h3>€20.50-€30.50</h3>
-            </div>
-            <div class="maillot">
+            </section>
+            <section class="maillot">
                 <a href="blabla"><img src="media/image/maillot/maillotCaen.png" alt="Maillot Caen">
                 <p>Maillot Caen - Homme</p>
                 <h3>€20.50-€30.50</h3></a>
-            </div>
+            </section>
         </div>
     </main>
     <footer>
