--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         </div>
         <nav>
             <a href="#accueil"><img src="media/image/logo.PNG" alt="Logo Entreprise"></a>
-            <a href="#Liga">LaLiga</a>
-            <a href="#Bundesliga">Bundesliga</a>
-            <a href="#PremierLeague">Premier League</a>
-            <a href="#Ligue1">Ligue 1</a>
-            <a href="#contacts">Contact</a>
+            <a href="#Liga">Homme</a>
+            <a href="#Bundesliga">Femme</a>
+            <a href="#PremierLeague">Enfant</a>
+            <a href="#Ligue1">Box Mystère</a>
+            <a href="/pages/nous-contacter.html">Contact</a>
         </nav>
     </div>
 
