Redirection lien Contact

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="#Bundesliga">Femme</a>
             <a href="#PremierLeague">Enfant</a>
             <a href="#Ligue1">Box Mystère</a>
-            <a href="/pages/nous-contacter.html">Contact</a>
+            <a href="pages/nous-contacter.html">Contact</a>
         </nav>
     </div>
 
