--- a/pages/nous-contacter.html
+++ b/pages/nous-contacter.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="media/image/logo.PNG" type="image/png">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/style/styleNousContacter.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style/styleNousContacter.css">
     <title>Nous Contacter</title>
 </head>
 <body>
