Redirection tous les liens

--- a/pages/nous-contacter.html
+++ b/pages/nous-contacter.html
@@ -12,25 +12,25 @@
     <div class="test">
         <div class="carousel">
             <div class="carousel-track">
-                <img src="/media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne">
-                <img src="/media/image/maillot/maillotLosc.png" alt="Maillot Losc">
-                <img src="/media/image/maillot/maillotMonaco.png" alt="Maillot Monaco">
-                <img src="/media/image/maillot/maillotOm.png" alt="Maillot Om">
-                <img src="/media/image/maillot/maillotReal.png" alt="Maillot Real">
-                <img src="/media/image/maillot/maillotJuventus.png" alt="Maillot Juventus">
-                <img src="/media/image/maillot/maillotCaen.png" alt="Maillot Caen">
-                <img src="/media/image/maillot/maillotUnited.png" alt="Maillot Manchester United">
-                <img src="/media/image/maillot/maillotSantos.png" alt="Maillot Santos">
-                <img src="/media/image/maillot/maillotStrasbourg.png" alt="Maillot Strasbourg">
-                <img src="/media/image/maillot/maillotAlNasser.png" alt="Maillot Al Nasser">
-                <img src="/media/image/maillot/maillotRiverPlate.png" alt="Maillot River Plate">
-                <img src="/media/image/maillot/maillotLyon.png" alt="Maillot Lyon">
-                <img src="/media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal">
-                <img src="/media/image/maillot/maillotItalie.png" alt="Maillot Italie">
-                <img src="/media/image/maillot/maillotBenfica.png" alt="Maillot Benfica">
-                <img src="/media/image/maillot/maillotComores.png" alt="Maillot Les Comores">
-                <img src="/media/image/maillot/maillotBayern.png" alt="Maillot Bayern">
-                <img src="/media/image/maillot/maillotMiami.png" alt="Maillot Miami">
+                <img src="../media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne">
+                <img src="../media/image/maillot/maillotLosc.png" alt="Maillot Losc">
+                <img src="../media/image/maillot/maillotMonaco.png" alt="Maillot Monaco">
+                <img src="../media/image/maillot/maillotOm.png" alt="Maillot Om">
+                <img src="../media/image/maillot/maillotReal.png" alt="Maillot Real">
+                <img src="../media/image/maillot/maillotJuventus.png" alt="Maillot Juventus">
+                <img src="../media/image/maillot/maillotCaen.png" alt="Maillot Caen">
+                <img src="../media/image/maillot/maillotUnited.png" alt="Maillot Manchester United">
+                <img src="../media/image/maillot/maillotSantos.png" alt="Maillot Santos">
+                <img src="../media/image/maillot/maillotStrasbourg.png" alt="Maillot Strasbourg">
+                <img src="../media/image/maillot/maillotAlNasser.png" alt="Maillot Al Nasser">
+                <img src="../media/image/maillot/maillotRiverPlate.png" alt="Maillot River Plate">
+                <img src="../media/image/maillot/maillotLyon.png" alt="Maillot Lyon">
+                <img src="../media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal">
+                <img src="../media/image/maillot/maillotItalie.png" alt="Maillot Italie">
+                <img src="../media/image/maillot/maillotBenfica.png" alt="Maillot Benfica">
+                <img src="../media/image/maillot/maillotComores.png" alt="Maillot Les Comores">
+                <img src="../media/image/maillot/maillotBayern.png" alt="Maillot Bayern">
+                <img src="../media/image/maillot/maillotMiami.png" alt="Maillot Miami">
                 <!-- Pour la boucle infinie, on duplique les images -->
                 <img src="/media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne">
                 <img src="/media/image/maillot/maillotLosc.png" alt="Maillot Losc">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <nav>
-            <a href="/index.html"><img src="/media/image/logo.PNG" alt="Logo Entreprise"></a>
+            <a href="/index.html"><img src="../media/image/logo.PNG" alt="Logo Entreprise"></a>
             <a href="#Liga">Homme</a>
             <a href="#Bundesliga">Femme</a>
             <a href="#PremierLeague">Enfant</a>
@@ -65,9 +65,9 @@
     <main>
         <div class="form-wrapper">
             <div class="form-header">
-                <img src="../media/image/logo.png" alt="FootJersey" class="logo-left">
+                <img src="../media/image/logo.PNG" alt="FootJersey" class="logo-left">
                 <h1>Nous Contacter !</h1>
-                <img src="../media/image/logo.png" alt="FootJersey" class="logo-right">
+                <img src="../media/image/logo.PNG" alt="FootJersey" class="logo-right">
             </div>
             <form action="mailto:footJersey@gmail.com" method="post" enctype="text/plain">
                 <label for="nom">Nom<span>*</span></label>
