--- a/pages/nous-contacter.html
+++ b/pages/nous-contacter.html
@@ -54,12 +54,12 @@
             </div>
         </div>
         <nav>
-            <a href="/index.html"><img src="../media/image/logo.PNG" alt="Logo Entreprise"></a>
+            <a href="../index.html"><img src="../media/image/logo.PNG" alt="Logo Entreprise"></a>
             <a href="#Liga">Homme</a>
             <a href="#Bundesliga">Femme</a>
             <a href="#PremierLeague">Enfant</a>
             <a href="#Ligue1">Box Mystère</a>
-            <a href="/pages/nous-contacter.html">Contact</a>
+            <a href="../pages/nous-contacter.html">Contact</a>
         </nav>
     </div>
     <main>
